# kalmanOptimalFilter

./: CMakeLists.txt  README.md  build_test.bat  build_vcpkg.bat  kalmanFilter.hpp
include/: KalmanFilter.hpp  KalmanMatrix.hpp  KalmanVector.hpp
test/: CMakeLists.txt  KalmanFilter.Test.cpp  KalmanMatrix.Test.cpp  KalmanVector.Test.cpp
test/functionalTest/: KalmanFilter.functionalTest.cpp
